# comit-rs

./: .dockerignore  .dprintrc.json  .gitignore  .mergify.yml  .spectral.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile_cache  Makefile  Makefile.toml  README.md  RELEASING.md  bors.toml  build.gcda  build.gcno  check-fmt.sh  check-rust-fmt.sh  create_docker_base_image.sh  docker-compose.yml  ether_quantity.gcno  fmt.sh  install-rust-fmt.sh  lib.gcda  main.gcno  metamask_ropsnet_seed_words.txt  nectar-toml.md  p2wpkh.gcda  p2wpkh.gcno  print_offsets.gcda  print_offsets.gcno  rfc003_bitcoin_htlc.gcno  rfc003_erc20_htlc.gcda  rfc003_erc20_htlc.gcno  rfc003_ether_htlc.gcda  rfc003_ether_htlc.gcno  run_e2e_cli_tests.sh  run_system_tests.sh  (+6 more)
application/bitcoin_htlc/: Cargo.toml
application/bitcoin_wallet/: Cargo.toml
bitcoin_htlc/: Cargo.toml
bitcoin_htlc/src/: bitcoin_htlc.rs  lib.rs  witness.rs
bitcoin_htlc/tests/: redeem_htlc_on_regtest.rs
bitcoin_rpc/: Cargo.toml
bitcoin_rpc/src/: bitcoin_rpc_api.rs  bitcoincore.rs  lib.rs  regtest_helpers.rs  script_util.rs  stub_rpc_client.rs  test_support.rs  test_utilities.rs
bitcoin_rpc/tests/: integration_tests.rs
bitcoin_rpc_helpers/: Cargo.toml
bitcoin_types/: Cargo.toml
bitcoin_types/src/: lib.rs  pubkeyhash.rs
bitcoin_wallet/: Cargo.toml
bitcoin_wallet/src/: bip32.rs  bitcoin_wallet.rs  key.rs  key_store.rs  lib.rs  weight.rs
bitcoin_witness/: Cargo.toml
bitcoin_witness/src/: lib.rs  p2wpkh.rs  primed_transaction.rs  witness.rs
bitcoin_witness/tests/: p2wpkh.rs  sign_with_rate.rs
blockchain_contracts/: Cargo.toml
blockchain_contracts/src/: fit_into_placeholder_slice.rs  lib.rs
blockchain_contracts/tests/: bitcoin_witness_p2wpkh.rs  bitcoin_witness_sign_with_rate.rs  rfc003_bitcoin_htlc.rs  rfc003_erc20_htlc.rs  rfc003_ether_htlc.rs
btc_htlc/: Cargo.toml
btc_htlc/src/: btc_htlc.rs  lib.rs
btsieve/: Cargo.toml
btsieve/config/: bitcoin_basicauth.toml  bitcoin_cookieauth.toml  bitcoin_only.toml  btsieve.toml  ethereum_only.toml
btsieve/src/: blocksource.rs  cli.rs  expected_version_header.rs  in_memory_query_repository.rs  in_memory_query_result_repository.rs  lib.rs  load_settings.rs  main.rs  matching_transactions.rs  query_repository.rs  query_result_repository.rs  quickcheck.rs  route_factory.rs  routes.rs
btsieve/tests/: bitcoin.rs  bitcoin_missing_blocks.rs  bitcoin_old_blocks.rs  bitcoin_transaction_pattern_e2e.rs  ethereum.rs  ethereum_pattern.rs  ethereum_transaction_pattern_e2e.rs  web3_http_blocksource.rs
cnd/: CHANGELOG.md  Cargo.toml  MIGRATIONS.md  build.rs  migrations.sh
cnd/config/: cnd.toml
cnd/src/: actions.rs  asset.rs  bam_ext.rs  bitcoin.rs  bitcoin_fees.rs  btsieve.rs  build.rs  cli.rs  comit_api.rs  comit_client.rs  comit_i_routes.rs  config.rs  connector.rs  connectors.rs  db.rs  dependencies.rs  ethereum.rs  facade.rs  file_lock.rs  first_or_else.rs  fs.rs  halbit.rs  halight.rs  hbit.rs  herc20.rs  http_api.rs  identity.rs  init_swap.rs  jsonrpc.rs  lib.rs  libp2p_comit_ext.rs  lightning.rs  lnd.rs  load_settings.rs  load_swaps.rs  local_swap_id.rs  logging.rs  main.rs  metadata_store.rs  network.rs  (+21 more)
cnd/tests/: bitcoin_go_back_into_the_past.rs  bitcoin_missed_previous_latest_block.rs  bitcoin_missing_blocks.rs  bitcoin_old_blocks.rs  bitcoin_transaction_pattern_e2e.rs  config.rs  db.rs  db_swap_types.rs  ethereum_go_back_into_the_past.rs  ethereum_missed_previous_latest_block.rs  ethereum_missing_blocks.rs  ethereum_old_blocks.rs  ethereum_pattern.rs  ethereum_transaction_matching_smoke_test.rs  ethereum_transaction_pattern_e2e.rs  load_settings.rs  settings.rs
comit/: Cargo.toml
comit/proptest-regressions/: lib.txt  order.txt
comit/src/: actions.rs  arbitrary.rs  asset.rs  bitcoin.rs  btsieve.rs  client.rs  ethereum.rs  expiries.rs  float_math.rs  halbit.rs  halight.rs  hbit.rs  herc20.rs  htlc_location.rs  identity.rs  ledger.rs  lib.rs  lightning.rs  lnd.rs  network.rs  order.rs  orderpool.rs  proptest.rs  quickcheck.rs  rsa.rs  secret.rs  secret_hash.rs  seed.rs  swap.rs  swap_id.rs  timestamp.rs  transaction.rs
comit/tests/: bitcoin_go_back_into_the_past.rs  bitcoin_missed_previous_latest_block.rs  bitcoin_transaction_pattern_e2e.rs  ethereum_go_back_into_the_past.rs  ethereum_missed_previous_latest_block.rs  ethereum_pattern.rs  ethereum_transaction_pattern_e2e.rs
comit_node/: Cargo.toml
comit_node/src/: bam_ext.rs  comit_i_routes.rs  lib.rs  load_settings.rs  logging.rs  main.rs  seed.rs
comit_node/tests/: rfc003_bitcoin_htlc.rs
common-types/: Cargo.toml
common-types/src/: currency.rs  lib.rs  trading_symbol.rs
common_types/: Cargo.toml
common_types/src/: crypto_quantity.rs  lib.rs  secret.rs
dependency_cache/: Cargo.toml
ethereum_wallet/: Cargo.toml
ethereum_wallet/src/: fake.rs  key.rs  lib.rs  transaction.rs  wallet.rs
ethereum_wallet/tests/: ganache_integration_tests.rs
exchange/: Cargo.toml
exchange/src/: lib.rs  main.rs  rocket_factory.rs  types.rs
exchange_service/: Cargo.toml
exchange_service/src/: ethereum_service.rs  event_store.rs  lib.rs  rocket_factory.rs  types.rs
fake_treasury_service/: Cargo.toml
fake_treasury_service/src/: main.rs
jsonrpc/: Cargo.toml
jsonrpc/src/: bitcoinrpcclient.rs  client.rs  lib.rs  request.rs  response.rs
key_gen/: Cargo.toml
key_gen/src/: main.rs
libp2p-comit/: Cargo.toml
libp2p-comit/src/: behaviour.rs  handler.rs  lib.rs  protocol.rs  test_harness.rs  transport.rs
nectar/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bors.toml  sample-config.toml
nectar/.geth_datadir/: UTC--2020-06-24T07-35-41.322460345Z--88552c5d1a30ac899e3d17c63754f3f257e42663
nectar/proptest-regressions/: order.txt  rate.txt
nectar/src/: bitcoin.rs  command.rs  config.rs  database.rs  ethereum.rs  float_maths.rs  fs.rs  history.rs  jsonrpc.rs  main.rs  maker.rs  mid_market_rate.rs  network.rs  order.rs  rate.rs  (+5 more)
secp256k1_support/: Cargo.toml
trading-service/: Cargo.toml
trading_client/: Cargo.toml
trading_service/: Cargo.toml  Dockerfile
(+2089 files in other folders)
