[package]
name = "nectar"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2018"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bitcoin = { version = "0.23.0", features = ["rand", "serde"] }
chrono = "0.4"
clarity = "0.1"
comit = { git = "https://github.com/comit-network/comit-rs", package = "comit", branch = "nectar" }
config = "0.10"
conquer-once = "0.2"
derivative = "2.1"
directories = "2.0"
ethabi = "2.0.0"
ethereum-types = "0.9.0"
futures = "0.3.5"
hex = "0.4"
lazy_static = "1.4"
libp2p = { version = "0.18", default-features = false, features = ["tcp", "secio", "yamux", "mplex", "mdns", "dns"] }
log = "0.4"
num = "0.3"
num256 = "0.2"
reqwest = { version = "0.10", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0"
sha3 = "0.9"
spectral = "0.6"
strum = "0.18"
strum_macros = "0.18"
thiserror = "1.0"
tiny-bip39 = "0.7"
tokio = { version = "0.2", features = ["macros", "time"] }
toml = "0.5"
tracing = "0.1.15"
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.rand]
default-features = false
version = "0.6"

[dev-dependencies]
proptest = "0.10"
testcontainers = "0.9"

[features]
default = ["test-docker"]

# "test-docker" feature is related to test code
# if it's enabled then tests needing docker will be ran
test-docker = []
