[package]
name = "bitcoin_htlc"
version = "0.1.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
bitcoin = { git = "https://github.com/coblox/rust-bitcoin.git", branch = "bitcoincore-regtest" }
bitcoin_rpc  = { path = "../bitcoin_rpc" }
common_types = { path = "../common_types" }
bitcoin_support = { path = "../bitcoin_support" }
bitcoin_witness = { path = "../bitcoin_witness" }
secp256k1_support = { path = "../secp256k1_support" }
hex = "0.3.2"
log = "0.4.2"

[dev-dependencies]
bitcoin_node    = { path = "../bitcoin_node" }
