[package]
name = "bitcoin_rpc"
version = "0.1.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
bitcoin = { git = "https://github.com/tenx-tech/rust-bitcoin.git", branch = "bitcoincore-regtest" }
jsonrpc = { path = "../jsonrpc" }
serde_json = "1.0.16"
serde_derive = "1.0.42"
serde = "1.0.42"
rustc-serialize = "0.3.24"
log = "0.4"

[dev-dependencies]
env_logger = "0.5.9"
