[package]
name = "bitcoin_rpc"
version = "0.1.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
bitcoin = { git = "https://github.com/coblox/rust-bitcoin.git", branch = "bitcoincore-regtest" }
hex = "0.3.2"
jsonrpc = { path = "../jsonrpc" }
serde_json = "1.0.19"
serde_derive = "1.0.63"
serde = "1.0.64"
rustc-serialize = "0.3.24"
log = "0.4"

[dev-dependencies]
env_logger = "0.5.9"
