[package]
name = "bitcoin_rpc_helpers"
version = "0.1.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
bitcoin_support = { path = "../bitcoin_support" }
bitcoin_rpc     = { path = "../bitcoin_rpc" }
