[package]
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
name = "bitcoin_wallet"
version = "0.1.0"
[dependencies]
hex = "0.3.2"
lazy_static = "1.0.1"
secp256k1 = "0.9.0"
bitcoin = { git = "https://github.com/tenx-tech/rust-bitcoin.git", branch = "bitcoincore-regtest" }
common_types = { path = "../common_types" }
bitcoin_rpc  = { path = "../bitcoin_rpc" }

[dev-dependencies.bitcoin_htlc]
path = "../btc_htlc"
