[package]
name = "blockchain_contracts"
version = "0.1.0"
authors = ["CoBloX developers <team@coblox.tech>"]
edition = "2018"
description = "Blockchain contracts used by COMIT-network daemons to execute cryptographic protocols."

[dependencies]
byteorder = "1.3"
hex = "0.4"
hex-literal = "0.2"
itertools = "0.8.0"
regex = "1.3"
rust-crypto = "0.2"
rust_bitcoin = { version = "0.19.1", package = "bitcoin" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.16"
strum_macros = "0.16"
tiny-keccak = "1.5"
web3 = { version = "0.8", default-features = false, features = ["http"] }

[dev-dependencies]
bitcoincore-rpc = "0.8.0-rc1"
failure = "0.1"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.3"
spectral = "0.6"
testcontainers = "0.8"
tiny-keccak = "1.5"

# These versions need to be changed together with web3, depends on what version of primitive-types ships with web3
[dev-dependencies.primitive-types]
features = ["rlp"]
version = "0.5.0"

[dev-dependencies.rlp]
version = "0.4.2"

[build-dependencies]
regex = "1.3"
