[package]
name = "btc_htlc"
version = "0.1.0"

authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
bitcoin_rpc = { path = "../bitcoin_rpc" }
bitcoin = { git = "https://github.com/tenx-tech/rust-bitcoin.git", branch = "bitcoincore-regtest" }
common_types = { path = "../common_types" }
hex = "0.3.2"
serde = "1.0.51"
serde_derive = "1.0.51"