[package]
authors = ["CoBloX developers <team@coblox.tech>"]
edition = "2018"
name = "btsieve"
version = "0.2.1"
description = "A b(lockchain) t(ransaction) sieve that allows clients to detect when certain events happen on a blockchain."

[dependencies]
bitcoin_support = { path = "../internal/bitcoin_support" }
derivative = "1"
ethbloom = "0.6.4"
ethereum_support = { path = "../internal/ethereum_support" }
futures = "0.1"
hex = "0.4"
log = "0.4"
reqwest = { version = "0.9", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "0.1"

[dev-dependencies]
lazy_static = "1.4.0"
quickcheck = "0.7"
spectral = "0.6"
testcontainers = "0.8"
