[package]
authors = ["CoBloX developers <team@coblox.tech>"]
edition = "2018"
name = "btsieve"
version = "0.2.1"
description = "A b(lockchain) t(ransaction) sieve that allows clients to detect when certain events happen on a blockchain."

[dependencies]

bitcoin_support = { path = "../internal/bitcoin_support" }
byteorder = "1.3"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.9", features = ["toml"] }
debug_stub_derive = "0.3"
derivative = "1"
directories = "2.0"
ethbloom = "0.6.4"
ethereum_support = { path = "../internal/ethereum_support" }
failure = "0.1"
fern = { version = "0.5", features = ["colored"] }
futures = "0.1"
hex = "0.4"
http = "0.1"
http-api-problem = "0.13"
hyper = "0.12"
itertools = "0.8"
log = "0.4"
pretty_env_logger = "0.3"
reqwest = { version = "0.9", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tokio = "0.1"
url = { version = "2.1", features = ["serde"] }
warp = { version = "0.1", default-features = false }

[dev-dependencies]
env_logger = "0.6"
hex = "0.4"
lazy_static = "1.4.0"
quickcheck = "0.7"
secp256k1_keypair = { path = "../internal/secp256k1_keypair" }
spectral = "0.6"
tc_web3_client = { path = "../internal/tc_web3_client" }
testcontainers = "0.8"
