[package]
authors = ["CoBloX developers <team@coblox.tech>"]
edition = "2018"
name = "btsieve"
version = "0.1.0"
description = "A b(lockchain) t(ransaction) sieve that allows clients to detect when certain events happen on a blockchain."

[dependencies]
bitcoin_support = { path = "../internal/bitcoin_support" }
derivative = "1"
ethbloom = "0.6.4"
ethereum_support = { path = "../internal/ethereum_support" }
futures-preview = { version = "=0.3.0-alpha.19", features = ["alloc", "compat", "async-await"] }
hex = "0.4"
log = "0.4"
reqwest = { version = "0.9", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "0.1"

[dev-dependencies]
bitcoincore-rpc = "0.8.0-rc1"
lazy_static = "1.4.0"
quickcheck = "0.7"
spectral = "0.6"
tc_bitcoincore_client = { path = "../internal/tc_bitcoincore_client" }
tc_web3_client = { path = "../internal/tc_web3_client" }
testcontainers = "0.8"
