[package]
authors = ["CoBloX developers <team@coblox.tech>"]
name = "cnd"
version = "0.5.1"
edition = "2018"
description = "Reference implementation of a COMIT network daemon."

[dependencies]
ambassador = "0.2"
anyhow = "1"
async-trait = "0.1"
bitcoin = { version = "0.19.1", features = ["use-serde"] }
chrono = { version = "0.4", features = ["serde"] }
comit = { path = "../comit" }
config = { version = "0.10", features = ["toml"], default-features = false }
derivative = "1"
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
directories = "2.0"
fern = { version = "0.5", features = ["colored"] }
futures = { version = "0.1" }
futures-core = { version = "0.3", features = ["compat", "async-await"], default-features = false, package = "futures" }
genawaiter = "0.2"
hex = "0.4"
http-api-problem = { version = "0.14", features = ["with_warp"] }
libp2p = { version = "0.13" }
libp2p-comit = { path = "../libp2p-comit" }
libsqlite3-sys = { version = ">=0.8.0, <0.13.0", features = ["bundled"] }
log = { version = "0.4", features = ["serde"] }
paste = "0.1"
rand = "0.7"
reqwest = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
siren = { version = "0.2", package = "siren-types" }
structopt = "0.3"
strum = "0.17"
strum_macros = "0.17"
thiserror = "1"
tokio = { version = "0.2", features = ["rt-core", "macros"] }
tokio-compat = "0.1"
toml = "0.5"
tracing = "0.1"
tracing-core = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.1"
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
void = "1.0.2"
warp = { version = "0.2", default-features = false }

[dev-dependencies]
matches = "0.1.8"
quickcheck = "0.9.2"
regex = "1.3"
serde_urlencoded = "0.6"
spectral = { version = "0.6", default-features = false }
tempfile = "3.1.0"
testcontainers = "0.8"
