[package]
authors = ["CoBloX developers <team@coblox.tech>"]
name = "cnd"
version = "0.7.2"
edition = "2018"
description = "Reference implementation of a COMIT network daemon."

[dependencies]
ambassador = "0.2"
anyhow = "1"
async-trait = "0.1"
base64 = "0.12.0"
bigdecimal = "0.1.0"
bitcoin = { version = "0.23", features = ["use-serde"] }
blockchain_contracts = "0.3.1"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.10", features = ["toml"], default-features = false }
derivative = "2"
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
digest = { path = "../digest" }
digest-macro-derive = { path = "../digest-macro-derive" }
directories = "2.0"
ethbloom = "0.9.0"
fern = { version = "0.6", features = ["colored"] }
fs2 = "0.4.3"
futures = { version = "0.3", features = ["async-await"], default-features = false }
genawaiter = { version = "0.99", features = ["futures03"] }
hex = "0.4"
http-api-problem = { version = "0.15", features = ["with_warp"] }
impl-template = "1.0.0-alpha"
lazy_static = "1"
levenshtein = "1"
libp2p = { version = "0.17", default-features = false, features = ["tcp", "secio", "yamux", "mplex", "mdns", "dns"] }
libp2p-comit = { path = "../libp2p-comit" }
libsqlite3-sys = { version = ">=0.8.0, <0.13.0", features = ["bundled"] }
log = { version = "0.4", features = ["serde"] }
lru = "0.4.3"
num = "0.2"
paste = "0.1"
pem = "0.7"
primitive-types = { version = "0.7.0", features = ["serde"] }
rand = "0.7"
reqwest = { version = "0.10", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1"
serdebug = "1"
sha2 = "0.8"
siren = { version = "0.2", package = "siren-types" }
structopt = "0.3"
strum = "0.18"
strum_macros = "0.18"
thiserror = "1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "0.2", features = ["rt-threaded", "time", "macros", "sync"] }
toml = "0.5"
tracing = { version = "0.1", features = ["attributes"] }
tracing-core = "0.1"
tracing-futures = { version = "0.2", features = ["std-future", "futures-03"] }
tracing-log = "0.1"
tracing-subscriber = "0.2"
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
void = "1.0.2"
warp = { version = "0.2", default-features = false }

[dev-dependencies]
base64 = "0.12"
bitcoincore-rpc = "0.10.0"
quickcheck = "0.9.2"
regex = "1.3"
serde_urlencoded = "0.6"
spectral = { version = "0.6", default-features = false }
tempfile = "3.1.0"
testcontainers = "0.9"
