[package]
authors = ["CoBloX developers <team@coblox.tech>"]
name = "comit"
version = "0.1.0"
edition = "2018"
description = "Core components of the COMIT protocol"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.12.3"
bincode = "1.2.1"
bitcoin = { version = "0.23.0", features = ["rand", "use-serde"] }
blockchain_contracts = "0.3.2"
chrono = { version = "0.4", features = ["serde"] }
conquer-once = "0.2.1"
derivative = "2"
digest = { path = "../digest" }
ethbloom = "0.9.1"
futures = { version = "0.3", default-features = false }
genawaiter = { version = "0.99", default-features = false, features = ["futures03"] }
hex = "0.4"
levenshtein = "1"
libp2p = { version = "0.23", default-features = false, features = ["gossipsub", "request-response"] }
lru = "0.6.0"
num = "0.3"
primitive-types = { version = "0.7.2", features = ["serde"] }
rand = "0.7"
reqwest = { version = "0.10.7", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde-hex = "0.1.0"
serde_derive = "1.0"
serde_json = "1"
serdebug = "1"
sha2 = "0.9"
strum = "0.19.2"
strum_macros = "0.19.2"
thiserror = "1"
tokio = { version = "0.2.22", features = ["sync"] }
tracing = "0.1.19"
tracing-futures = { version = "0.2", features = ["std-future", "futures-03"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
atty = "0.2"
bitcoincore-rpc = "0.11.0"
libp2p = { version = "0.23", default-features = false, features = ["secio", "yamux"] }
log = { version = "0.4", features = ["serde"] }
proptest = "0.10.0"
spectral = { version = "0.6", default-features = false }
testcontainers = "0.9"
tokio = { version = "0.2.22", features = ["macros"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-core = "0.1"
tracing-futures = { version = "0.2", features = ["std-future", "futures-03"] }
tracing-log = "0.1"
tracing-subscriber = "0.2"

[features]
default = []
test = ["libp2p/secio", "libp2p/yamux"]
