[package]
authors = ["CoBloX developers <team@coblox.tech>"]
name = "comit_node"
version = "0.1.0"
edition = "2018"

[dependencies]
bam = { path = "../vendor/bam" }
binary_macros = "0.6"
bitcoin_support = { path = "../vendor/bitcoin_support" }
bitcoin_witness = { path = "../vendor/bitcoin_witness" }
blockchain_contracts = { path = "../vendor/blockchain_contracts" }
chrono = { version = "0.4", features = ["serde"] }
comit_i = { path = "../vendor/comit_i" }
config = { version = "0.9", features = ["toml"] }
debug_stub_derive = "0.3"
derivative = "1"
directories = "2.0"
either = "1.5"
enum-display-derive = "0.1"
ethereum_support = { path = "../vendor/ethereum_support" }
failure = "0.1"
fern = { version = "0.5", features = ["colored"] }
futures = "0.1"
hex = "0.3"
hex-serde = "0.1.0"
http = "0.1"
http-api-problem = "0.13"
hyper = "0.12"
libp2p = "0.10"
log = "0.4"
maplit = "1"
mime = "0.3"
mime_guess = "1.8"
rand = "0.7"
reqwest = "0.9"
rlp = "0.3"
rust-crypto = "0.2"
rustic_hal = "0.2"
secp256k1_support = { path = "../vendor/secp256k1_support" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
siren = { path = "../vendor/siren" }
state_machine_future = { version = "0.2" }
structopt = "0.2"
strum = "0.15"
strum_macros = "0.15"
tokio = "0.1"
toml = "0.5"
url = "1.7"
url_serde = "0.2.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
void = "1.0.2"
warp = "0.1"

[dev-dependencies]
bitcoin_rpc_test_helpers = { path = "../vendor/bitcoin_rpc_test_helpers" }
bitcoincore-rpc = "0.6"
key_gen = { path = "../vendor/key_gen" }
lazy_static = "1"
maplit = "1"
memsocket = "0.1"
pretty_env_logger = "0.3"
quickcheck = "0.8.5"
quickcheck_macros = "0.8.0"
serde_urlencoded = "0.5"
spectral = "0.6"
tc_bitcoincore_client = { path = "../vendor/tc_bitcoincore_client" }

tc_web3_client = { path = "../vendor/tc_web3_client" }
testcontainers = "0.7"
tiny-keccak = "1.4"
