[package]
name = "common-types"
version = "0.1.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
serde = "1.0.51"
regex = "1.0.0"
lazy_static = "1.0.0"
serde_json = "1.0.17"
