[package]
authors = ["Thomas Eizinger <thomas@coblox.tech>", "Philipp Hoenisch <philipp@coblox.tech>", "Franck Royer <franck@coblox.tech>", "Lloyd Fournier <lloyd@coblox.tech>"]
name = "common_types"
version = "0.1.0"
[dependencies]
bigdecimal = "0.0.12"
byteorder = "1.2.3"
hex = "0.3.2"
lazy_static = "1.0.1"
num = "0.1.42"
rand = "0.4.2"
regex = "1.0.0"
rust-crypto = "0.2.36"
serde = "1.0.64"
serde_derive = "1.0.63"
serde_json = "1.0.19"
web3 = "0.3.0"
