[package]
name = "dependency_cache"
version = "0.1.0"
authors = ["Thomas Eizinger <thomas@eizinger.io>"]

[dependencies]
bitcoin = { git = "https://github.com/tenx-tech/rust-bitcoin.git", branch = "bitcoincore-regtest" }
chrono = "0.4.2"
crypto = "0.0.2"
env_logger = "0.5.10"
hex = "0.3.2"
http-api-problem = { version = "0.5.2", features = ["with_rocket"] }
lazy_static = "1.0.1"
log = "0.4.1"
rand = "0.4.2"
reqwest = "0.8.5"
rlp = "0.2.2"
rocket = "=0.3.10"
rocket_codegen = "=0.3.10"
rocket_contrib = "=0.3.10"
secp256k1 = "0.9.0"
serde = "1.0.64"
serde_derive = "1.0.63"
serde_json = "1.0.19"
spectral = "0.6.0"
structopt = "0.2.8"
tiny-keccak = "1.4.2"
uuid = { version = "0.6.3", features = ["serde", "v4"] }
web3 = "0.3.0"