[package]
name = "ethereum_wallet"
version = "0.1.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
ethereum_support = { path = "../ethereum_support" }
secp256k1 = "0.9.0"
hex = "0.3.2"
rlp = "0.2.2"
tiny-keccak = "1.4.2"

[dev-dependencies]
hex = "0.3.1"
ganache_node = { path = "../ganache_node" }
