[package]
name = "exchange"
version = "0.1.0"

authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
reqwest = "0.8.5"
serde = "1.0.51"
serde_derive = "1.0.51"
lazy_static = "1.0.0"
uuid = { version = "0.6.3", features = ["serde", "v4"] }
rocket = "0.3.10"
rocket_contrib = "0.3.10"
log = "0.4.1"
rocket_codegen = "0.3.10"
common-types = { path = "../common-types" }
bitcoin-rpc = { path = "../bitcoin-rpc" }