[package]
name = "exchange_service"
version = "0.1.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
bitcoin_rpc = { path = "../bitcoin_rpc" }
bitcoin_htlc = { path = "../btc_htlc" }
bitcoin = { git = "https://github.com/tenx-tech/rust-bitcoin.git", branch = "bitcoincore-regtest" }
reqwest = "0.8.5"
serde = "1.0.51"
serde_derive = "1.0.51"
lazy_static = "1.0.0"
uuid = { version = "0.6.3", features = ["serde", "v4"] }
rocket = "=0.3.10"
rocket_contrib = "=0.3.10"
log = "0.4.1"
rocket_codegen = "=0.3.10"
common_types = { path = "../common_types" }
bitcoin_wallet = { path = "../bitcoin_wallet" }
http-api-problem = { version = "0.5.2", features = ["with_rocket"] }
serde_json = "1.0.17"
ethereum_htlc = { path = "../ethereum_htlc" }
web3 = "0.3.0"
ethereum_wallet = { path = "../ethereum_wallet" }
hex = "0.3.2"
secp256k1 = "0.9.0"
tiny-keccak = "1.4.2"