[package]
name = "fake_treasury_service"
version = "0.1.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
rocket = "=0.3.10"
rocket_codegen = "=0.3.10"
rocket_contrib = "=0.3.10"
serde = "1.0.64"
serde_derive = "1.0.63"
log = "0.4.2"
common_types = { path = "../common_types" }

[dev-dependencies]
web3 = "0.3.0"
serde_json = "1.0.19"
