[package]
name = "jsonrpc"
version = "0.1.0"

authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
reqwest = "0.8.5"
serde_json = "1.0.16"
serde_derive = "1.0.42"
serde = "1.0.42"
spectral = "0.6.0"