[package]
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
name = "key_gen"
version = "0.1.0"
[dependencies]
bitcoin = { git = "https://github.com/coblox/rust-bitcoin.git", branch = "bitcoincore-regtest" }
bitcoin_wallet = { path = "../bitcoin_wallet" }
ethereum_wallet = { path = "../ethereum_wallet" }
hex = "0.3.2"
rand = "0.3"
secp256k1 = "0.9.0"
