[package]
name = "libp2p-comit"
version = "0.1.0"
authors = ["CoBloX developers <team@coblox.tech>"]
edition = "2018"
description = "Implementation of the COMIT messaging protocol"

[dependencies]
bytes = "0.4"
derivative = "1.0.3"
futures = "0.1"
libp2p-core = "0.12"
libp2p-swarm = "0.2"
log = "0.4"
memsocket = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = "0.16"
strum_macros = "0.16"
tokio = "0.1"
tokio-codec = "0.1"

[dev-dependencies]
matches = "0.1.8"
multistream-select = "0.5.0"
pretty_env_logger = "0.3"
spectral = "0.6"
