[package]
name = "libp2p-comit"
version = "0.1.0"
authors = ["CoBloX developers <team@coblox.tech>"]
edition = "2018"
description = "Implementation of the COMIT messaging protocol"

[dependencies]
bytes = "0.5"
derivative = "1"
futures = { version = "0.3", features = ["alloc", "io-compat"] }
futures_codec = "0.4"
libp2p = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.18"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
spectral = "0.6"
